# legalgenius

./: .env.example  .gitignore  ELASTICSEARCH_MIGRATION_GUIDE.md  LICENSE  Makefile  README.md  README_evaluation.md  elasticsearch_indexer.py  evaluate_cases.py  evaluation_results.csv  pyproject.toml  requirements.txt  simple_elasticsearch_indexer.py  test_search.py
clerk-react/: package-lock.json  package.json
client/: __init__.py  agent_cli.py  session_log.py
configs/: config.example.yaml
deploy/systemd/: legalgenius-backend.service  legalgenius-frontend.service
ludwig/: cases2021.csv  cases2021.numbers
mcp_server/: cli.py  server.py  tools.py
scrapers/: export_urteile_openlegaldata_markdown_by_year.py  fetch_neuris_neu.py  fetch_neuris_urteile_from_xml.py  fetch_urteile_neuris.py  scrape_years.sh
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/public/: index.html
web/src/: App.tsx  env.d.ts  main.tsx
web/src/components/: AdminCreditsPanel.tsx  AdminUsersTab.tsx  CreditBadge.tsx  ReasoningTraceBox.tsx  TokenCounter.tsx
web/src/utils/: api.ts
web_server/: __init__.py  api.py  models.py
