[project]
name = "legalgenius"
version = "0.1.0"
description = "AI-powered German legal research: FastAPI API, MCP tools, CLI, and Elasticsearch indexing"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "LegalGenius Team" }
]
license = { text = "Proprietary" }
keywords = ["legal", "search", "fastapi", "elasticsearch", "mcp", "cli"]

dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "openai>=1.40.0",
  "PyYAML>=6.0.1",
  "httpx>=0.27.0",
  "requests>=2.31.0",
]

[project.urls]
Homepage = "https://example.com"

[project.scripts]
legalgenius-cli = "client.agent_cli:main"
legalgenius-mcp = "mcp_server.server:main"
legalgenius-index = "simple_elasticsearch_indexer:main"
legalgenius-api = "web_server.api:main"

[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["."], include = ["mcp_server*", "web_server*", "client*"], exclude = ["web*", "data*", "logs*", "venv*"] } }

